# alphanso

./: .gitignore  .pre-commit-config.yaml  AI_CONVERGENCE_FRAMEWORK_PLAN_LANGGRAPH_CORRECTED.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  test_anchors.md  test_link.md
.github/: AUTO_MERGE_SECURITY.md  DEPENDABOT.md  PR_COMMANDS.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  external-pr-auto-merge.yml  pages.yml  pr-commands.yml
docs/: index.html
examples/: README.md
examples/callable-demo/: README.md  demo.py
examples/custom-workflows/: README.md  custom_workflows_demo.py  demo.py  direct_ai_fix.yaml  retry_without_ai.yaml  simple_workflow.yaml
examples/dependency-upgrade/: .gitignore  README.md  config.yaml  run.sh  setup.sh
examples/dependency-upgrade/prompts/: upgrade-assistant.txt
examples/hello-world/: .gitignore  README.md  config.yaml  run.py  run.sh
examples/hello-world-conflict/: .gitignore  README.md  config.yaml  run.sh  setup.sh
examples/hello-world-conflict/prompts/: conflict-resolver.txt
examples/hello-world/prompts/: conflict-resolver.txt
examples/openshift-rebase/: .gitignore  README.md  config.yaml  ocp-rebase.sh  run.sh  setup.sh
examples/openshift-rebase/lib/: auto-merge.sh  ci-image-setup.sh  git-utils.sh  test-utils.sh  version-utils.sh
examples/openshift-rebase/prompts/: rebase-assistant.txt
src/alphanso/: __init__.py  api.py  cli.py
src/alphanso/actions/: pre_actions.py
src/alphanso/agent/: __init__.py  client.py  prompts.py
src/alphanso/config/: schema.py
src/alphanso/graph/: builder.py  conditions.py  edges.py  nodes.py  registry.py  state.py
src/alphanso/utils/: __init__.py  callable.py  logging.py  subprocess.py
src/alphanso/validators/: __init__.py  base.py  callable.py  command.py  git.py  test_suite.py
tests/: test_command_validator.py  test_validators.py
tests/integration/: test_backward_compatibility.py  test_claude_sdk.py  test_custom_workflows.py
tests/unit/: test_agent_client.py  test_api.py  test_callable.py  test_cli.py  test_config.py  test_graph.py  test_logging.py  test_main_script.py  test_pre_actions.py  test_state.py  test_test_suite_validator.py  test_workflow.py
