[project]
name = "alphanso"
version = "0.1.0"
description = "AI-assisted iterative problem resolution framework using LangGraph and Claude"
readme = "README.md"
authors = [
    { name = "Harshal Patil", email = "12152047+harche@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2,<2.0",
    "anthropic>=0.40,<1.0",
    "claude-agent-sdk>=0.1,<1.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-mock>=3.12,<4.0",
    "mypy>=1.8,<2.0",
    "black>=24.0,<26.0",
    "isort>=5.13,<8.0",
    "ruff>=0.6,<1.0",
    "types-PyYAML>=6.0,<7.0",
    "pre-commit>=4.0,<5.0",
]
vertex = [
    "anthropic[vertex]>=0.40,<1.0",
    "google-cloud-aiplatform>=1.38,<2.0",
]

[project.scripts]
alphanso = "alphanso.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphanso"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

# mypy configuration
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=alphanso",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["src/alphanso"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
